--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:maps="clr-namespace:Xamarin.Forms.Maps;assembly=Xamarin.Forms.Maps"
              x:Class="AppTFG.Paginas.PaginaPueblo"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.ToolbarItems>
@@ -12,16 +11,16 @@
         <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>-->
         <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
             <StackLayout Spacing="0" Padding="0" Margin="0">
-                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-15">
+                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-20">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="2*"/>
+                        <RowDefinition Height="1.5*"/>
                         <RowDefinition Height="2*"/>
                         <RowDefinition Height="400"/>
                     </Grid.RowDefinitions>
                     <Image Grid.Row="0" x:Name="imgPueblo" Source="{Binding ImagenPrincipal}"
                                Aspect="AspectFill" HeightRequest="150"/>
-                    <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                        <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}">
+                    <Frame Grid.Row="1" CornerRadius="20" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
+                        <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}" HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5">
                             <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="2*"/>
@@ -31,7 +30,7 @@
                                 Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="StartAndExpand" FontSize="Large"
                                 PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" />
                                 <Button Grid.Column="1" x:Name="btnImagen" Text="Foto perfil" 
-                                BackgroundColor="Transparent" Margin="0" FontSize="Medium"
+                                BackgroundColor="{DynamicResource PrimaryColor}" Margin="0" FontSize="Medium"
                                 TextColor="{DynamicResource PrimaryTextColor}" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
                             </Grid>
@@ -46,23 +45,23 @@
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
-                                <Button x:Name="btnRutas" Text="Rutas"
-                                    BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
+                                <Button x:Name="btnRutas" Text="Rutas" Margin="5"
+                                    BackgroundColor="{DynamicResource PrimaryColor}" FontFamily="BSDRegular"
                                     TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnRutas_Clicked" Grid.Column="0" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Rutas" FontSize="Large" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                                <Button x:Name="btnActividades" Text="Acts"
-                                    BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular"
+                                <Button x:Name="btnActividades" Text="Acts" Margin="5"
+                                    BackgroundColor="{DynamicResource PrimaryColor}" FontFamily="BSDRegular"
                                     TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnActividades_Clicked" Grid.Column="1" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Actividades" FontSize="Large" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                                <Button x:Name="btnFotos" Text="Fotos"
-                                    BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                <Button x:Name="btnFotos" Text="Fotos" Margin="5"
+                                    BackgroundColor="{DynamicResource PrimaryColor}" 
                                     TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="FillAndExpand" FontFamily="BSDRegular"
                                     Clicked="BtnFotos_Clicked" Grid.Column="2" Grid.Row="0" BorderColor="Gray"/>
                                 <Label Text="Fotos" FontSize="Large" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
-                                <Button x:Name="btnVideo" Text="Vídeos" 
-                                    BackgroundColor="{DynamicResource PageBackgroundColor}" 
+                                <Button x:Name="btnVideo" Text="Vídeos" Margin="5"
+                                    BackgroundColor="{DynamicResource PrimaryColor}" 
                                     TextColor="{DynamicResource PrimaryTextColor}"  HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnVideo_Clicked" Grid.Column="3" Grid.Row="0" BorderColor="Gray" FontFamily="BSDRegular"/>
                                 <Label Text="Vídeos" FontSize="Large"  Grid.Column="3" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
@@ -72,11 +71,12 @@
                                 PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </Frame>
-                    <StackLayout Grid.Row="2" x:Name="stackMapa" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="5">
-                            <Button Text="Street" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
-                            <Button Text="Satélite" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
-                            <Button Text="Híbrido" FontSize="Large" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PageBackgroundColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular"/>
+                    <StackLayout Grid.Row="2" Margin="0,0,0,0" HeightRequest="-1" WidthRequest="-1" Spacing="2.5">
+                        <StackLayout x:Name="stackMapa" HeightRequest="-1" WidthRequest="-1" VerticalOptions="Fill" HorizontalOptions="Fill"/>
+                        <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" Spacing="5" >
+                            <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                            <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                            <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PrimaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
                         </StackLayout>
                     </StackLayout>
                 </Grid>
