--- a/AppTFG/AppTFG/Paginas/ListaRutas.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaRutas.xaml
@@ -7,7 +7,7 @@
     <ContentPage.Content>
         <StackLayout>
             <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>-->
-            <ListView x:Name="lsvRutas" ItemsSource="{Binding Rutas}" ItemSelected="LsvRutas_ItemSelected" HasUnevenRows="True">
+            <ListView x:Name="lsvRutas" ItemSelected="LsvRutas_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
