--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -8,7 +8,7 @@
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked"/>
     </ContentPage.ToolbarItems>
     <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}">
-        <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>-->
+        <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center"/>
         <ScrollView Margin="0" VerticalScrollBarVisibility="Never">
             <StackLayout Spacing="0" Padding="0" Margin="0">
                 <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="-20">
@@ -17,7 +17,7 @@
                         <RowDefinition Height="2*"/>
                         <RowDefinition Height="400"/>
                     </Grid.RowDefinitions>
-                    <Image Grid.Row="0" x:Name="imgPueblo" Source="{Binding ImagenPrincipal}"
+                    <Image Grid.Row="0" x:Name="imgPueblo"
                                Aspect="AspectFill" HeightRequest="150"/>
                     <Frame Grid.Row="1" CornerRadius="20" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
                         <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}" HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5">
