--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaActividades.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaActividades.xaml
@@ -5,8 +5,8 @@
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.Content>
         <StackLayout>
-            <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>-->
-            <ListView x:Name="lsvActividadesPueblo" ItemsSource="{Binding Actividades}" ItemSelected="LsvActividadesPueblo_ItemSelected" HasUnevenRows="True">
+            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ListView x:Name="lsvActividadesPueblo" ItemSelected="LsvActividadesPueblo_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
