--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaRutas.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaRutas.xaml
@@ -5,8 +5,8 @@
              BackgroundColor="{DynamicResource PageBackgroundColor}">
     <ContentPage.Content>
         <StackLayout>
-            <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>-->
-            <ListView x:Name="lsvRutasPueblo" ItemsSource="{Binding Rutas}" ItemSelected="LsvRutasPueblo_ItemSelected" HasUnevenRows="True">
+            <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
+            <ListView x:Name="lsvRutasPueblo" ItemSelected="LsvRutasPueblo_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
