--- a/AppTFG/AppTFG/Paginas/SubirVideo.xaml
+++ b/AppTFG/AppTFG/Paginas/SubirVideo.xaml
@@ -8,7 +8,7 @@
     <ContentPage.Content>
         <ScrollView VerticalScrollBarVisibility="Never">
             <StackLayout>
-                <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="0"/>-->
+                <ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" WidthRequest="0"/>
                 <StackLayout Padding="15">
                     <Grid RowSpacing="0">
                         <Grid.RowDefinitions>
