--- a/AppTFG/AppTFG/Paginas/LoginPage.xaml
+++ b/AppTFG/AppTFG/Paginas/LoginPage.xaml
@@ -6,11 +6,11 @@
              mc:Ignorable="d"
              x:Class="AppTFG.Paginas.LoginPage"
              Shell.NavBarIsVisible="False"
-             BackgroundColor="Transparent">
+             BackgroundColor="White">
 
     <ContentPage.Content>
-        <Grid>
-            <BoxView x:Name="bdGradient" Scale="4" AnchorX="1" AnchorY="0">
+        <!--<Grid>-->
+            <!--<BoxView x:Name="bdGradient" Scale="4" AnchorX="1" AnchorY="0">
                 <BoxView.Background>
                     <LinearGradientBrush>
                         <GradientStop Color="AliceBlue" Offset="0.3"/>
@@ -19,7 +19,7 @@
                         <GradientStop Color="LightSkyBlue" Offset="1.0" />
                     </LinearGradientBrush>
                 </BoxView.Background>
-            </BoxView>
+            </BoxView>-->
             <StackLayout VerticalOptions="Center">
                 <Entry Text="{Binding Nombre}" Placeholder="Usuario" MaxLength="10" IsSpellCheckEnabled="True" IsTextPredictionEnabled="True" TextColor="Black" PlaceholderColor="Black" Margin="10,0,10,10" FontFamily="BSDRegular"/>
                 <Entry Text="{Binding Password}" Placeholder="Contraseña" MaxLength="10" IsPassword="True" IsSpellCheckEnabled="True" IsTextPredictionEnabled="True" TextColor="Black" PlaceholderColor="Black" Margin="10,0,10,10" FontFamily="BSDRegular"/>
@@ -38,7 +38,7 @@
                     <Button Grid.Column="2" BackgroundColor="Transparent" ImageSource="google.png" HorizontalOptions="Center"/>
                 </Grid>-->
             </StackLayout>
-        </Grid>
+        <!--</Grid>-->
     </ContentPage.Content>
 
 </ContentPage>
